gccida/c0/store_constructor_field
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/expr.c:4803:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/expr.c:4809:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/expr.c:4827:38: error: use of undeclared identifier 'machine_mode'
v10 = bitpos % get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)) != 0; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/expr.c:4827:53: error: expected expression
v10 = bitpos % get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)) != 0; 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/expr.c:4835:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( targeta[1] ) 
^    ~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_constructor_field/src/obj/expr.o] Error 1
